--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,16 @@
 [DEFAULT]
-rakuten_parts=7777777
-rakuten_evidence=777777777
-yahoo_parts=777777777
-yahoo_evidence=777777777
-wauma_parts=32960183
-wauma_evidence=32960183
+rakuten_parts = sss
+rakuten_evidence = ssss
+yahoo_parts = 777777777
+yahoo_evidence = 777777777
+wauma_parts = 32960183
+wauma_evidence = 32960183
+yamato_kake = 0.8
+yamato_price = 800
+yupake_kake = 0.85
+yupake_price = 280
+yupack_kake = 0.8
+yupack_price = 630
+tax = 1.122
+genkaritu = 0.63
+
